<resources>

    <string name="app_name">Ark Monitor</string>
    <string name="action_alarm">Alarm</string>
    <string name="empty" />
    <string name="undefined">-</string>
    <string name="percent_symbol">%</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="current_version">Version 1.3.1</string>
    <string name="for_txt">for</string>
    <string name="android_txt">Android</string>

    <string name="alarm_on">Notifications on</string>
    <string name="alarm_off">Notifications off</string>

    <string name="nav_home">Home</string>
    <string name="nav_latest_transactions">Latest Transactions</string>
    <string name="nav_forged_blocks">Forged Blocks</string>
    <string name="nav_peers">Peers</string>
    <string name="nav_delegates">Delegates</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_votes_made">Votes made</string>
    <string name="nav_votes_received">Votes received</string>

    <string name="save_action">Save</string>

    <!-- Settings -->
    <string name="ip_address">IP address</string>
    <string name="ip_address_hint">0.0.0.0</string>
    <string name="ip_address_message">Please enter a valid ip address</string>
    <string name="username_message">Please enter a valid username</string>
    <string name="port">Port</string>
    <string name="port_hint">4001</string>
    <string name="port_message">Please enter a valid port</string>
    <string name="ssl_enabled">SSL enabled?</string>

    <string name="notification_interval">Notification interval</string>
    <string-array name="notification_interval_types">
        <item>7 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
    </string-array>

    <!-- Delegates-->
    <string name="rank">Rank</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="productivity">Productivity</string>
    <string name="last_block_forged">Last block forged</string>
    <string name="approval">Approval</string>
    <string name="forged_blocks">Produced blocks</string>
    <string name="missed_blocks">Missed blocks</string>
    <string name="forged_missed_blocks">Forged / Missed blocks</string>

    <!-- Peers -->
    <string name="status">Status</string>
    <string name="version">Version</string>
    <string name="blocks_remaining">Blocks remaining</string>
    <string name="total_blocks">Total blocks</string>

    <!-- Voters -->
    <string name="balance">Balance</string>

    <!-- Main -->
    <string name="account">Account</string>
    <string name="total_balance">Total balance</string>
    <string name="btc_equivalent">BTC equivalent</string>
    <string name="usd_equivalent">USD equivalent</string>
    <string name="eur_equivalent">EUR equivalent</string>
    <string name="delegate">Delegate</string>
    <string name="name">Name</string>
    <string name="rank_status">Rank / Status</string>
    <string name="server">Server</string>
    <string name="standby">Standby</string>
    <string name="active">Active</string>
    <string name="ranking_status_value">%1$s / %2$s</string>
    <string name="forged_missed_value">%1$s / %2$s</string>
    <string name="forging">Forging</string>
    <string name="fees">Fees</string>
    <string name="rewards">Rewards</string>
    <string name="forged">Forged</string>
    <string name="not_forging"> - </string>

    <!-- Transaction -->
    <string name="transaction_id">Transaction ID</string>
    <string name="amount">Amount</string>
    <string name="time">Time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="fee">Fee</string>
    <string name="confirmations">Confirmations</string>
    <string name="second_signature_creation">Second signature creation</string>
    <string name="delegate_registration">Delegate registration</string>
    <string name="delegate_vote">Delegate vote</string>

    <!-- Block -->
    <string name="height">Height</string>
    <string name="reward">Reward</string>

    <!-- Errors -->
    <string name="internet_off">Please connect to internet.</string>
    <string name="unable_to_retrieve_data">Unable to retrieve data. Please try again later.</string>
</resources>