<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/divisor_height"
        android:background="@color/lineColor" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_vertical_margin"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/peer_ip_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/ip_address"
            android:textAlignment="textStart"
            android:textSize="@dimen/default_font_size" />

        <TextView
            android:id="@+id/peer_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/port"
            android:textAlignment="center"
            android:textSize="@dimen/default_font_size" />

        <TextView
            android:id="@+id/peer_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/version"
            android:textAlignment="center"
            android:textSize="@dimen/default_font_size" />

        <ImageView
            android:id="@+id/peer_status"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/status"
            android:text="@string/status"
            android:textAlignment="center" />

    </LinearLayout>
</LinearLayout>
