<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/divisor_height"
        android:background="@color/lineColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/transaction_id"
            android:textAlignment="textStart"
            android:textSize="@dimen/default_font_size" />

        <TextView
            android:id="@+id/transaction_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/empty"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAlignment="textEnd"
            android:textSize="@dimen/default_font_size" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time"
            android:textAlignment="textStart"
            android:textSize="@dimen/default_font_size" />

        <TextView
            android:id="@+id/transaction_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="textEnd"
            android:textSize="@dimen/default_font_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/from"
            android:textAlignment="textStart"
            android:textSize="@dimen/default_font_size" />

        <TextView
            android:id="@+id/transaction_sender_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/empty"
            android:textAlignment="textEnd"
            android:textSize="@dimen/default_font_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/to"
            android:textAlignment="textStart"
            android:textSize="@dimen/default_font_size" />

        <TextView
            android:id="@+id/transaction_recipient_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAlignment="textEnd"
            android:textSize="@dimen/default_font_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/amount"
            android:textAlignment="textStart"
            android:textSize="@dimen/default_font_size" />

        <TextView
            android:id="@+id/transaction_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="textEnd"
            android:textSize="@dimen/default_font_size" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fee"
            android:textAlignment="textStart"
            android:textSize="@dimen/default_font_size" />

        <TextView
            android:id="@+id/transaction_fee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/empty"
            android:textAlignment="textEnd"
            android:textSize="@dimen/default_font_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_vertical_margin"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirmations"
            android:textAlignment="textStart"
            android:textSize="@dimen/default_font_size" />

        <TextView
            android:id="@+id/transaction_confirmations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/empty"
            android:textAlignment="textEnd"
            android:textSize="@dimen/default_font_size" />
    </LinearLayout>


</LinearLayout>
