<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/default_horizontal_margin"
    android:layout_marginRight="@dimen/default_horizontal_margin"
    android:layout_marginTop="@dimen/default_vertical_margin"
    android:orientation="vertical"
    tools:context="com.vrlcrypt.arkmonitor.fragments.PeersFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/peer_ip_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/ip_address"
            android:textAlignment="textStart"
            android:textSize="@dimen/default_font_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/peer_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/port"
            android:textAlignment="center"
            android:textSize="@dimen/default_font_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/peer_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/version"
            android:textAlignment="center"
            android:textSize="@dimen/default_font_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/peer_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/status"
            android:textAlignment="center"
            android:textSize="@dimen/default_font_size"
            android:textStyle="bold" />

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/peers_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvPeers"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>
