<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/default_horizontal_margin"
    android:layout_marginRight="@dimen/default_horizontal_margin"
    android:layout_marginTop="@dimen/default_vertical_margin"
    android:orientation="vertical"
    tools:context="com.vrlcrypt.arkmonitor.fragments.DelegatesFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/delegate_rank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/rank"
            android:textAlignment="center"
            android:textSize="@dimen/default_font_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/delegate_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/username"
            android:textAlignment="center"
            android:textSize="@dimen/default_font_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/delegate_approval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/approval"
            android:textAlignment="center"
            android:textSize="@dimen/default_font_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/delegate_productivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/productivity"
            android:textAlignment="center"
            android:textSize="@dimen/default_font_size"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/delegates_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvDelegates"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>
